<resources>
    <string name="app_name">Popular Movies</string>
    <string name="loading">Loading ...</string>
    <string name="error_message">No data was received !</string>
    <string name="connection_error_message">
        There is not a stable network connection !\n
        Please connect a network and then refresh the list.\n
        Or you can try reach favorite movies could have been using on offline mode.</string>

    <string name="error_no_favorite_movie">We worked hard but
        didn\'t find any favorite movie. ! So Sorry :(</string>

    <string name="popular_title">Popular Movies</string>
    <string name="top_rated_title">Top Rated Movies</string>
    <string name="upcoming_title">Upcoming Movies</string>
    <string name="favorite_title">My Favorite Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings_desc">Settings Description</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_desc">Refresh the movie list</string>
    <string name="action_sort_popular">Popular</string>
    <string name="action_sort_popular_desc">if select this option movies are sorted by popularity</string>
    <string name="action_sort_top_movies">Top Rated</string>
    <string name="action_sort_favorite_movies">Favorites</string>
    <string name="action_sort_favorite_movies_desc">if select this option favorite movies are shown</string>
    <string name="action_sort_upcoming_movies">Upcoming</string>
    <string name="action_sort_upcoming_movies_desc">if select this option upcoming movies are shown</string>
    <string name="showcase_title">Here are movies</string>
    <string name="thumbnail_content_desc">Movie cover image</string>

    <string name="backdrop_content_desc">Movie backdrop image</string>

    <!-- detail strings -->

    <string name="detail_title_tools">Movie Title will be here</string>
    <string name="detail_title">Title</string>

    <string name="detail_tagline_tools">Tagline will be here</string>
    <string name="detail_tagline">Tagline</string>

    <string name="detail_genres_tools">Genres will be here</string>
    <string name="detail_genres">Genres</string>

    <string name="detail_vote_tools">Vote Average will be here</string>
    <string name="detail_vote">Vote Average     -     Vote Count</string>

    <string name="detail_overview_tools">Overview will be here</string>
    <string name="detail_overview">Overview</string>

    <string name="detail_release_date_tools">Release Date will be here</string>
    <string name="detail_release_date">Release Date</string>

    <string name="detail_status_tools">Status will be here</string>
    <string name="detail_status">Status</string>

    <string name="detail_homepage_tools">Homepage will be here</string>
    <string name="detail_homepage">Website</string>

    <string name="detail_imdb_id_tools">IMDB Link will be here</string>
    <string name="detail_imdb_id">Imdb Link</string>

    <string name="add_favorite">Add to Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>

    <!-- detail strings -->


    <!-- trailer strings -->
    <string name="detail_trailer">Trailer(s)</string>
    <string name="trailer_play_desc">Trailer play button</string>

    <!-- trailer strings -->

    <!-- review strings -->
    <string name="detail_review">Review(s)</string>
    <string name="more_review">Show More Reviews ... </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- review strings -->

</resources>
