<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin_vertical"
        android:layout_marginLeft="@dimen/card_margin_horizontal"
        android:layout_marginRight="@dimen/card_margin_horizontal"
        android:layout_marginTop="@dimen/card_margin_vertical"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/movie_land_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/movie_cover_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="4"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/thumbnail_content_desc"
                android:focusable="true"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="@dimen/main_land_desc_width"
                android:layout_height="@dimen/movie_cover_height"
                android:layout_weight="6"
                android:background="@color/movie_title_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/detail_title"
                    android:textColor="@color/land_movie_desc"
                    android:textSize="@dimen/main_land_title_text_size" />

                <TextView
                    android:id="@+id/tv_main_land_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/land_movie_title"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/detail_tagline"
                    android:textColor="@color/land_movie_desc"
                    android:textSize="@dimen/main_land_title_text_size" />

                <TextView
                    android:id="@+id/tv_main_land_tagline"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/land_movie_title"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/detail_genres"
                    android:textColor="@color/land_movie_desc"
                    android:textSize="@dimen/main_land_title_text_size" />

                <TextView
                    android:id="@+id/tv_main_land_genre"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/land_movie_title"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/detail_release_date"
                    android:textColor="@color/land_movie_desc"
                    android:textSize="@dimen/main_land_title_text_size" />

                <TextView
                    android:id="@+id/tv_main_land_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_land_title_text_size"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/land_movie_title"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>